--- a/agents-docs/content/docs/typescript-sdk/artifact-components.mdx
+++ b/agents-docs/content/docs/typescript-sdk/artifact-components.mdx
@@ -1,5 +1,5 @@
 ---
-title: Artifact Components | Typescript SDK
+title: Artifact Components
 description: Learn how to use artifact components to store and retrieve data from the agent
 icon: "TbInputSpark"
 ---
