--- a/agents-docs/content/docs/typescript-sdk/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials.mdx
@@ -1,5 +1,5 @@
 ---
-title: Credentials | Typescript SDK
+title: Credentials
 description: The credentials are a mechanism for securely storing and retrieving credentials for mcp servers.
 icon: "LuKey"
 ---
