--- a/agents-docs/content/docs/visual-builder/artifact-components.mdx
+++ b/agents-docs/content/docs/visual-builder/artifact-components.mdx
@@ -1,5 +1,5 @@
 ---
-title: Artifact Components | Visual Builder
+title: Artifact Components
 description: Artifact components are used to add artifacts to the graph.
 icon: "TbInputSpark"
 ---
