--- a/agents-docs/content/docs/talk-to-your-agents/overview.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview | Talk to Your Agents
+title: Overview
 description: Learn how to talk to your agents
 icon: "LuMessageSquare"
 ---
