--- a/agents-docs/content/docs/visual-builder/data-components.mdx
+++ b/agents-docs/content/docs/visual-builder/data-components.mdx
@@ -1,5 +1,5 @@
 ---
-title: Data Components | Visual Builder
+title: Data Components
 description: Data components are used to add data to the graph.
 icon: "LuLayoutTemplate"
 ---
