--- a/agents-docs/content/docs/typescript-sdk/artifact-components.mdx
+++ b/agents-docs/content/docs/typescript-sdk/artifact-components.mdx
@@ -15,8 +15,8 @@ const agent = agent({
   // ... other agent config
   artifactComponents: [
     {
-      id: "document-artifact",
-      name: "Document Artifact",
+      id: "citation",
+      name: "Citation",
       description:
         "Structured factual information extracted from search results",
       props: {
