--- a/agents-docs/content/docs/visual-builder/request-context.mdx
+++ b/agents-docs/content/docs/visual-builder/request-context.mdx
@@ -57,5 +57,5 @@ You can generate custom schemas using this [JSON Schema generator](https://trans
 
 Here is an example of a valid prompt:
 ```text
-You are a helpful assistant for {{requestContext.userId}}!.
+You are a helpful assistant for {{headers.userId}}!.
 ```
