--- a/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
@@ -11,16 +11,17 @@ The InkeepSidebarChat component provides a slide-out panel interface for convers
 
 <CodeGroup>
 ```bash title="npm"
-npm install @inkeep/cxkit-react-oss
+npm install @inkeep/agents-ui
 ```
 
 ```bash title="yarn"
-yarn add @inkeep/cxkit-react-oss
+yarn add @inkeep/agents-ui
 ```
 
 ```bash title="pnpm"
-pnpm add @inkeep/cxkit-react-oss
+pnpm add @inkeep/agents-ui
 ```
+
 </CodeGroup>
 
 ## Quick Start
@@ -34,7 +35,7 @@ pnpm add @inkeep/cxkit-react-oss
     
     ```tsx
     import { useState } from "react";
-    import { InkeepSidebarChat, type InkeepSidebarChatProps } from "@inkeep/cxkit-react-oss";
+    import { InkeepSidebarChat, type InkeepSidebarChatProps } from "@inkeep/agents-ui";
 
     export default function App() {
       const [isOpen, setIsOpen] = useState(false);
@@ -60,14 +61,14 @@ pnpm add @inkeep/cxkit-react-oss
       );
     }
     ```
-    
+
     ### Trigger through data attributes
-    
+
     ```tsx
     import {
       InkeepSidebarChat,
       type InkeepSidebarChatProps,
-    } from "@inkeep/cxkit-react-oss";
+    } from "@inkeep/agents-ui";
 
     export default function App() {
       const sidebarChatProps: InkeepSidebarChatProps = {
@@ -89,12 +90,13 @@ pnpm add @inkeep/cxkit-react-oss
       );
     }
     ```
-    
+
     **To get an API key:**
     1. Open the Visual Builder Dashboard
     2. Navigate to your Project → **API Keys**
     3. Click **Create New Key** and select your agent graph
     4. Copy the key (shown once) and store it in your environment variables
+
   </Tab>
   
   <Tab title="Development">
@@ -108,7 +110,7 @@ pnpm add @inkeep/cxkit-react-oss
     import {
       InkeepSidebarChat,
       type InkeepSidebarChatProps,
-    } from "@inkeep/cxkit-react-oss";
+    } from "@inkeep/agents-ui";
 
     export default function App() {
       const [isOpen, setIsOpen] = useState(false);
@@ -138,14 +140,14 @@ pnpm add @inkeep/cxkit-react-oss
       );
     }
     ```
-    
+
     ### Trigger through data attributes
-    
+
     ```tsx
     import {
       InkeepSidebarChat,
       type InkeepSidebarChatProps,
-    } from "@inkeep/cxkit-react-oss";
+    } from "@inkeep/agents-ui";
 
     export default function App() {
       const sidebarChatProps: InkeepSidebarChatProps = {
@@ -171,8 +173,9 @@ pnpm add @inkeep/cxkit-react-oss
       );
     }
     ```
-    
+
     **Note:** Run your API server with `ENVIRONMENT=development` to bypass authentication.
+
   </Tab>
 </Tabs>
 
